ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/ca-secret"  # Секрет с корневым CA
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-url: "http://opa-service.opa.svc.cluster.local:8181/v1/data/ingress/authz"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization"
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header Content-Type "application/json";
      proxy_set_header Content-Length "";
      proxy_set_body $auth_request_body;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - my-service.example.com
      secretName: tls-secret  # TLS-сертификат для HTTPS
  rules:
    - host: my-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 80
